# napalm-101

./: .gitignore  README.md  inventory.yaml  pyproject.toml
environments/pslab/: config.yaml
environments/user1/: config.yaml  inventory.yaml
specs/: 0001-multi-env-and-snapshots.md  0002-scalability-roadmap.md  0003-incremental-hybrid-schema.md
src/napalm_101/: __init__.py  cli.py
src/napalm_101/core/: exceptions.py  inventory.py  manager.py
src/napalm_101/tasks/: audits.py  base.py  configs.py  getters.py
tests/: test_inventory.py  test_manager_tasks.py
